--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
  onmousedown="return false" scroll="no">
 
 
-<div class="slidecontainer">
+/*<div class="slidecontainer">
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
   <p>Value: <span id="demo"></span></p>
-</div>p
+</div>*/
 
 
 <video height="95%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
