--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
  onselectstart="return false" 
  onmousedown="return false" scroll="no">
 
-
-
+<div id="optionMenu" style="display:none;">
+<div class="slidecontainer">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+  <p>Value: <span id="demo"></span></p>
+</div>
+</div>
 
 
 <video height="95%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
