--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </div>
 
-<div id="lightbox">
+<div id="lightbox" style="display: none;">
 
 <a id="MainMenu" bottom: 5%; display: none;"><span><strong>Main menu</strong></span></a>
 
