--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 
-<video height="95%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
+<video id="video" height="95%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
          <source id="mp4video" type="video/mp4" src="videos/intro.mp4"></source>
 </video>
 </div>
