--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
 <div>
 					  
 	<label id="layer1" style="display:none;"></label>
-					  
+	<label id="layer2" style="display:none;"></label>
+	<label id="layer3" style="display:none;"></label>
+	<label id="layer4" style="display:none;"></label>
+	<label id="layer5" style="display:none;"></label>
+	<label id="layer6" style="display:none;"></label>
+	<label id="layer7" style="display:none;"></label>				  
 </div>
 
 <script type="text/javascript" src="Scripts/menu.js"></script>
