--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@
 
 </div>
 
-<a id="skipMessage" onclick="functionEl2()" style="bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
-
-<a id="skipStory" onclick="functionEl()" style="left: 50%; bottom: 5%; display: none;"><span><strong>Skip Story</strong></span></a>
-
+<a id="skipMessage" onclick="functionEl2()" style="bottom: 25%; display: none;"><span><strong>Continue</strong></span></a>
 <div id="choiceA" class="container" style="display: none;">
 	
-	<a id="A1" style=" right: 30%;bottom: 5%;"><span><strong>I'm gonna watch a movie...</strong></span></a>
-	<a id="A2" style="bottom: 5%;"><span><strong>I'm gonna check outside...</strong></span></a>
+	<a id="A1" style=" right: 60%; bottom: 5%;"><span><strong>I'm gonna watch a movie...</strong></span></a>
+	<a id="A2" style="right: 30%; bottom: 5%;"><span><strong>I'm gonna check outside...</strong></span></a>
 	  
 </div>
 
@@ -90,9 +87,9 @@
 
 <div id="FINAL" class="container" style="display: none;">
 
-	<a id="FINAL1" style="left: 10%; bottom: 2%;"><span><strong>GRAB PHONE</strong></span></a>
-	<a id="FINAL2" style="left: 45%; bottom: 2%;"><span><strong>GRAB CAR KEY</strong></span></a>
-	<a id="FINAL3" style="left: 80%; bottom: 2%; color: darkred"><span><strong>USE COMPUTER</strong></span></a>
+	<a id="FINAL1" style="left: 10%; bottom: 40%;"><span><strong>GRAB PHONE</strong></span></a>
+	<a id="FINAL2" style="left: 45%; bottom: 40%;"><span><strong>GRAB CAR KEY</strong></span></a>
+	<a id="FINAL3" style="left: 80%; bottom: 40%; color: darkred"><span><strong>USE COMPUTER</strong></span></a>
 	
 </div>
 	
