--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 </div>
 
-<a id="skipMessage" onclick="functionEl2()" style="bottom: 25%; display: none;"><span><strong>Continue</strong></span></a>
+<a id="skipMessage" onclick="functionEl()" style="bottom: 25%; display: none;"><span><strong>Continue</strong></span></a>
 <div id="choiceA" class="container" style="display: none;">
 	
 	<a id="A1" style=" right: 60%; bottom: 5%;"><span><strong>I'm gonna watch a movie...</strong></span></a>
