--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div height="100%" width="100%" style="position: fixed center;">
 
     <div id="single" onclick="myFunction()" style="display:block;"><p style="font-size:2vw;"><strong>SINGLE PLAYER</strong></p></div>
-    <div id="options" style="display:block;"><p style="font-size:2vw;"><strong>OPTIONS</strong></p></div>
-    <div id="credits" style="display:block;"><p style="font-size:2vw;"><strong>CREDITS</strong></p></div>
+    <!--<div id="options" style="display:block;"><p style="font-size:2vw;"><strong>OPTIONS</strong></p></div>
+    <div id="credits" style="display:block;"><p style="font-size:2vw;"><strong>CREDITS</strong></p></div>-->
 
 </div>
 
