--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 	<a id="FINAL1" style="left: 10%; bottom: 80%;"><span><strong>GRAB PHONE</strong></span></a>
 	<a id="FINAL2" style="left: 45%; bottom: 80%;"><span><strong>GRAB CAR KEY</strong></span></a>
-	<a id="FINAL3" style="left: 80%; bottom: 80%; color: darkred"><span><strong>USE COMPUTER</strong></span></a>
+	<a id="FINAL3" style="left: 80%; bottom: 80%;"><span><strong>USE COMPUTER</strong></span></a>
 	
 </div>
 	
